cmd/pint/tests/0141_empty_keys.txt
pint.error --no-color lint rules.yml
! stdout .
cmp stderr stderr.txt

-- stderr.txt --
level=INFO msg="Finding all rules to check" paths=["rules.yml"]
level=WARN msg="Failed to parse file content" err="YAML syntax error at line 4: expected a YAML string here, got null instead" path=rules.yml lines=1-15
rules.yml:4 Fatal: expected a YAML string here, got null instead (yaml/parse)
 4 |       - record:

level=INFO msg="Problems found" Fatal=1
level=ERROR msg="Fatal error" err="found 1 problem(s) with severity Bug or higher"
-- rules.yml --
groups:
  - name: rules
    rules:
      - record:
        expr:
      - record:
        expr: vector(1)
      - record: foo
        expr:
      - alert:
        expr:
      - alert:
        expr: vector(1) > 0
      - alert: foo
        expr:
